--- a/app/app/src/style/App.scss
+++ b/app/app/src/style/App.scss
@@ -1,8 +1,8 @@
-@import '~bootstrap/scss/bootstrap-grid.scss';
+@import '../../node_modules/bootstrap/scss/bootstrap-grid';
 
 
 .App {
-  text-align: center;
+  /* text-align: center; */
 }
 
 .App-logo {
