some style structure

--- a/app/app/src/style/App.scss
+++ b/app/app/src/style/App.scss
@@ -1,9 +1,13 @@
 @import '../../node_modules/bootstrap/scss/bootstrap-grid';
+@import './variables';
+@import './nav-bar';
 
 
 .App {
   /* text-align: center; */
 }
+
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
