adding more style structure and navbar as component

--- a/app/app/src/style/App.scss
+++ b/app/app/src/style/App.scss
@@ -1,5 +1,7 @@
 @import '../../node_modules/bootstrap/scss/bootstrap-grid';
 @import './variables';
+@import './font';
+@import './containers';
 @import './nav-bar';
 
 
