--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -1,3 +1,14 @@
 $color-primary: #00a900;
+$color-secondary: #5950ff; // just stick something in for now
+$color-tertiary: teal;
+$color-light: #e4e4e4;
 $color-dark: #515151;
 $color-white: #ffffff;
+
+$color-danger: red;
+$color-warning: orange;
+$color-success: green;
+
+
+$min-nav-height: 60px;
+$min-footer-height: 100px;
