big wip on workflow with auth and other network calls and redux

--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -67,6 +67,18 @@ section {
   }
 }
 
+.feed-list {
+  ul {
+    padding: 0;
+    list-style: none;
+
+    li {
+      padding: 10px 0;
+      border-bottom: 1px solid $color-light;
+    }
+  }
+}
+
 
 @include media-breakpoint-up(md) {
   .content-wrapper {
