--- a/app/app/src/style/font.scss
+++ b/app/app/src/style/font.scss
@@ -100,10 +100,10 @@ body {
     font-size: 1.1em;
   }
   .text-sm {
-    font-size: 0.9em;
-  }
-  .text-xs-sm {
     font-size: 0.8em;
+  }
+  .text-xs {
+    font-size: 0.7em;
   }
 
   a {
