--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -1,10 +1,14 @@
-$color-primary: #00a900;
-$color-secondary: #5950ff; // just stick something in for now
-$color-tertiary: teal;
+// colors taken from Phase1UI
+$color-primary: #43913c;
+$color-secondary: #675e9a;
+$color-tertiary: #6c757d;
+
+
 $color-light: #e4e4e4;
 $color-dark: #515151;
 $color-white: #ffffff;
 
+// todo pick some nice colors
 $color-danger: red;
 $color-warning: orange;
 $color-success: green;
