sorting padding and margins on feed container inners - some basic buttons

--- a/app/app/src/style/App.scss
+++ b/app/app/src/style/App.scss
@@ -3,5 +3,7 @@
 @import './font';
 @import './containers';
 @import './nav-bar';
-@import './helpers';
 @import './tags';
+@import './forms';
+@import './helpers';
+
