borderless option for tags - twas annoying me

--- a/app/app/src/style/tags.scss
+++ b/app/app/src/style/tags.scss
@@ -18,6 +18,10 @@
         background: lighten($color-primary, 20%);
         color: $color-white;
       }
+
+      &.is-borderless {
+        border: none;
+      }
     }
 
     &.is-text-white {
