basic create problem, added velocity for animation

--- a/app/app/src/style/forms.scss
+++ b/app/app/src/style/forms.scss
@@ -38,6 +38,12 @@
   &.is-block {
     width: 100%;
   }
+
+  &:focus {
+    outline: none;
+    // todo this needs to be replaced with something that keeps
+    // it clear for accessability
+  }
 }
 
 .dp-input {
