--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -70,6 +70,9 @@ section {
 .box {
   border: 1px solid $color-light;
   padding: 15px;
+  &.is-light {
+    background: lighten($color-light, 8%);
+  }
 }
 
 .feed-list {
