--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -1,16 +1,55 @@
-.nav-bar {
-  background: $color-primary;
+.header-bar {
+  .top-bar {
+    background: lighten($color-primary, 5%);
+    padding-top: 5px;
+    padding-bottom: 5px;
+    h1 {
+      font-weight: 200;
+    }
+  }
   ul {
     list-style: none;
+    padding: 0;
+    margin: 0 0 0 0;
 
     li {
       display: inline-block;
-      padding: 5px;
+      padding: 1px 15px 1px 0;
 
       a {
-        color: $color-white;
+        color: $color-dark;
         text-decoration: none;
       }
     }
+    li:last-child {
+      padding-right: 0;
+    }
   }
+  .nav-bar {
+    color: darken($color-light, 30%);
+    border-bottom: 1px solid lighten($color-primary, 20%);
+    /* border-top: 1px solid lighten($color-primary, 20%); */
+    /* background: $color-primary; */
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 10px 0 10px 0;
+
+      li {
+        display: inline-block;
+        padding: 1px 15px 1px 0;
+
+        a {
+          color: darken($color-light, 30%);
+          text-decoration: none;
+          &.active {
+            color: $color-primary;
+          }
+        }
+      }
+    }
+  }
+
+
 }
+
