hooked up signup to login redux and refactored auth action

--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -19,6 +19,9 @@
       a {
         color: $color-dark;
         text-decoration: none;
+        &.active {
+          color: $color-white;
+        }
       }
     }
     li:last-child {
