some tidying on signup form

--- a/app/app/src/style/font.scss
+++ b/app/app/src/style/font.scss
@@ -131,6 +131,9 @@ body {
   .text-danger {
     color: $color-danger;
   }
+  .text-warning {
+    color: $color-warning;
+  }
 }
 
 @include media-breakpoint-up(lg) {
