--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -75,7 +75,18 @@ section {
   }
 }
 
+.absolute-feed-alert {
+  position: absolute;
+  bottom: 0;
+  height: 50px;
+  left: 0;
+  border: 1px solid $color-primary;
+  padding: 1rem;
+}
+
 .feed-list {
+  overflow: auto;
+  max-height: 80vh;
   ul {
     padding: 0;
     list-style: none;
