--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -133,18 +133,43 @@ section {
       }
     }
   }
-  ul.pledges-list {
-    font-size: 0.9em;
-    border: none;
-    border-left: 1px solid $color-light;
+}
 
-    li {
-      padding: 2px 10px;
-      border-bottom: 1px solid $color-light;
-    }
-    li:last-child {
-      border-bottom: none;
-    }
+ul.pledges-list {
+  list-style: none;
+  margin: 0;
+  padding: 10px;
+  font-size: 0.9em;
+  border: none;
+  border-left: 1px solid $color-light;
+
+  li {
+    padding: 2px 10px;
+    border-bottom: 1px solid $color-light;
+  }
+  li:last-child {
+    border-bottom: none;
+  }
+}
+
+.title-bar {
+  padding: 15px 0;
+  border-bottom: 1px solid darken($color-light, 15%)
+}
+.content-body {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  p {
+    padding-top: 5px;
+    margin-bottom: 10px;
+  }
+  h1, h2, h3 {
+    padding: 10px 0;
+    margin-bottom: 10px;
+  }
+  p.sub {
+    margin-bottom: 5px;
+    color: lighten($color-dark, 15%)
   }
 }
 
