Some more styling and forms span fix

--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -16,3 +16,7 @@ $color-success: green;
 
 $min-nav-height: 60px;
 $min-footer-height: 100px;
+$feed-border-radius: 2px;
+
+$feed-item-header-bgcolor: #3c7936;
+$feed-item-header-color: #ffffff;
