--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -100,13 +100,15 @@ section {
   ul {
     padding: 0;
     list-style: none;
-    border: 1px solid darken($color-light, 15%);
-
+  //  border: 1px solid darken($color-light, 15%);
     li {
+      margin-bottom: 10px;
+      border-radius: $feed-border-radius;
+      border: 1px solid darken($color-light, 15%);
       padding: 0;
-      border-bottom: 1px solid darken($color-light, 15%);
 
       .row {
+        border-radius: 0;
         padding: 0;
         margin: 0;
         .col, div[class^="col-"] {
@@ -116,8 +118,9 @@ section {
       }
 
       .inner-header {
-        padding: 10px;
-
+        padding: 0 10px;
+        vertical-align: middle;
+        line-height: 18px;
         .title {
           font-size: 1.1em;
           color: darken($color-dark, 15%);
@@ -131,7 +134,15 @@ section {
           }
         }
         &.is-light {
-          background: lighten($color-light, 8%);
+          line-height: 35px;
+          background-color: $feed-item-header-bgcolor;
+          color: $feed-item-header-color;
+          .title {
+            color: $feed-item-header-color;
+          }
+          .dp-info{
+            font-size: 12px;
+          }
         }
       }
 
@@ -153,7 +164,10 @@ ul.pledges-list {
 
   li {
     padding: 2px 10px;
+    border: none;
     border-bottom: 1px solid $color-light;
+    border-radius:0;
+
   }
   li:last-child {
     border-bottom: none;
