--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -1,9 +1,11 @@
+
+$logo-white-round: '/logo100x100.png';
 // colors taken from Phase1UI
 $color-primary: #43913c;
 $color-secondary: #675e9a;
 $color-tertiary: #6c757d;
 
-
+$color-pre-white: #2a302b;
 $color-light: #e4e4e4;
 $color-dark: #515151;
 $color-white: #ffffff;
