--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -18,7 +18,7 @@
       padding: 1px 15px 1px 0;
 
       a {
-        color: lighten($color-pre-white,2%);
+        color: lighten($color-super-dark,2%);
         text-decoration: none;
         &.active {
           color: $color-white;
