I think this is better

--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -20,5 +20,5 @@ $min-nav-height: 60px;
 $min-footer-height: 100px;
 $feed-border-radius: 2px;
 
-$feed-item-header-bgcolor: #3c7936;
-$feed-item-header-color: #ffffff;
+$feed-item-header-bgcolor: #414041;
+$feed-item-header-color:  white;
