--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -102,10 +102,10 @@ section {
     list-style: none;
   //  border: 1px solid darken($color-light, 15%);
     li {
-      margin-bottom: 10px;
+      margin-bottom: 15px;
       border-radius: $feed-border-radius;
       border: 1px solid $feed-item-header-bgcolor;
-      padding: 0;
+      padding: 0px;
 
       .row {
         border-radius: 0;
@@ -122,7 +122,7 @@ section {
         vertical-align: middle;
         line-height: 18px;
         .title {
-          font-size: 1.1em;
+          font-size: 0.9em;
           color: darken($color-dark, 15%);
         }
 
@@ -139,9 +139,11 @@ section {
           color: $feed-item-header-color;
           .title {
             color: $feed-item-header-color;
+            font-weight: normal;
           }
           .dp-info{
-            font-size: 12px;
+            font-size: 0.7em;
+            font-weight: lighter;
           }
         }
       }
@@ -149,6 +151,11 @@ section {
       .inner {
         font-size: 0.9em;
         padding: 0 10px;
+        p{
+          font-size: 0.85em;
+          font-weight: lighter;
+          padding: 5px;
+        }
       }
     }
   }
