fixing tags and adding some mixins file for common style blocks

--- a/app/app/src/style/App.scss
+++ b/app/app/src/style/App.scss
@@ -1,5 +1,6 @@
 @import '../../node_modules/bootstrap/scss/bootstrap-grid';
 @import './variables';
+@import './mixins';
 @import './font';
 @import './containers';
 @import './nav-bar';
