--- a/app/app/src/style/tags.scss
+++ b/app/app/src/style/tags.scss
@@ -6,10 +6,14 @@
     float: right;
   }
 
+  @include noselect;
+
   span {
     margin-right: 5px;
-    padding: 3px;
+    margin-top: 3px;
+    padding: 1px 5px;
     border: 1px solid darken($color-light,20%);
+    display: inline-block;
 
     &.is-primary {
       border: 1px solid $color-primary;
