--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -123,7 +123,7 @@ section {
         line-height: 18px;
         .title {
           font-size: 0.9em;
-          color: darken($color-dark, 15%);
+          color: lighten($color-super-dark, 15%);
         }
 
         &.is-primary {
