--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -4,6 +4,7 @@
     padding-top: 5px;
     padding-bottom: 5px;
     color: darken($color-white,5%);
+    border-bottom: 1px solid darken($color-primary,20%);
     h1 {
       font-weight: 200;
     }
@@ -18,10 +19,11 @@
       padding: 1px 15px 1px 0;
 
       a {
-        color: lighten($color-super-dark,2%);
+        text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+        color: $color-white;
         text-decoration: none;
         &.active {
-          color: $color-white;
+          color: lighten($color-super-dark,2%);
         }
       }
     }
@@ -30,11 +32,11 @@
     }
   }
   .nav-bar {
-    color: darken($color-light, 30%);
-    border-bottom: 1px solid lighten($color-primary, 20%);
+    color: lighten($color-primary, 35%);
+    border-bottom: 2px solid darken($color-tertiary,10%);
 
     /* border-top: 1px solid lighten($color-primary, 20%); */
-    /* background: $color-primary; */
+    background: lighten($color-tertiary,10%);
     ul {
       list-style: none;
       padding: 0;
@@ -45,10 +47,11 @@
         padding: 1px 15px 1px 0;
 
         a {
-          color: darken($color-light, 30%);
+          text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+          color: lighten($color-primary,20%);
           text-decoration: none;
           &.active {
-            color: $color-primary;
+            color: $color-white;
           }
         }
       }
