--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -1,10 +1,13 @@
 .header-bar {
   .top-bar {
-    background: lighten($color-primary, 5%);
+    box-shadow:
+            inset 0px 11px 50px -10px darken($color-primary, 20%),
+            inset 0px -11px 3px -10px darken($color-primary, 5%);
+    background: $color-primary;
     padding-top: 5px;
     padding-bottom: 5px;
-    color: darken($color-white,5%);
-    border-bottom: 1px solid darken($color-primary,20%);
+    color: darken($color-secondary, 10%);
+    border-bottom: 1px solid $color-primary;
     h1 {
       font-weight: 200;
     }
@@ -19,11 +22,13 @@
       padding: 1px 15px 1px 0;
 
       a {
-        text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-        color: $color-white;
+        // text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+        font-weight: 200;
+        color: darken($color-secondary, 10%);
         text-decoration: none;
         &.active {
-          color: lighten($color-super-dark,2%);
+          font-weight: 600;
+          color: $color-white;
         }
       }
     }
@@ -32,11 +37,13 @@
     }
   }
   .nav-bar {
-    color: lighten($color-primary, 35%);
-    border-bottom: 2px solid darken($color-tertiary,10%);
+    color: $color-quaternary;
+    border-bottom: 1px solid darken($color-secondary, 10%);
+
+    box-shadow: inset 0px 11px 15px -10px darken($color-secondary, 10%);
 
     /* border-top: 1px solid lighten($color-primary, 20%); */
-    background: lighten($color-tertiary,10%);
+    background: $color-secondary;
     ul {
       list-style: none;
       padding: 0;
@@ -47,10 +54,12 @@
         padding: 1px 15px 1px 0;
 
         a {
-          text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
-          color: lighten($color-primary,20%);
+          text-shadow: none;
+          font-weight: 200;
+          color: $color-primary;
           text-decoration: none;
           &.active {
+            font-weight: 600;
             color: $color-white;
           }
         }
