--- a/app/app/src/style/helpers.scss
+++ b/app/app/src/style/helpers.scss
@@ -28,6 +28,12 @@
 }
 
 
+/** icons **/
+.inline-icon {
+  margin-bottom: -3px;
+}
+
+
 /** decoration **/
 .has-line-container {
   position: relative;
