--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -99,13 +99,24 @@ section {
   max-height: 75vh;
   ul {
     padding: 0;
+    padding-left: 10px;
+    padding-right: 10px;
     list-style: none;
   //  border: 1px solid darken($color-light, 15%);
-    li {
-      margin-bottom: 15px;
-      border-radius: $feed-border-radius;
-      border: 1px solid $feed-item-header-bgcolor;
+    li.feed-item {
+      // margin-bottom: 15px;
+      // border-radius: $feed-border-radius;
+      border: 1px solid $color-dark;
+      border-top: none;
+      // border-top: 1px solid lighten($feed-item-header-bgcolor, 30%);
       padding: 0px;
+      // margin-bottom: 5px;
+      overflow: hidden;
+
+      &:first-child {
+        border-top: 1px solid $color-dark;
+        // border-top: 1px solid $feed-item-header-bgcolor;
+      }
 
       .row {
         border-radius: 0;
@@ -121,7 +132,8 @@ section {
         padding: 0 10px;
         vertical-align: middle;
         line-height: 35px;
-        border-bottom: 1px solid $feed-item-header-bgcolor;
+        // border-bottom: 1px solid $color-primary;
+
         .title {
           font-size: 0.9em;
           color: lighten($color-super-dark, 15%);
@@ -137,8 +149,10 @@ section {
         &.is-light {
           background-color: $color-white;
           color: $feed-item-header-bgcolor;
+          background: $color-very-light;
+          border-bottom: 1px solid $color-light;
           .title {
-            color: darken($feed-item-header-bgcolor, 10%);
+            color: $color-super-dark;
             font-weight: normal;
           }
           .dp-info{
@@ -149,13 +163,35 @@ section {
       }
 
       .inner {
-        font-size: 0.9em;
-        padding: 0 10px;
-        p{
-          font-size: 0.85em;
-          font-weight: lighter;
-          padding: 5px;
+        font-size: 0.9rem;
+        // padding: 0;
+        padding: 5px 10px;
+        .problem-content {
+          // padding: 5px 10px;
+          // background: $color-very-light;
+          // border-right: 1px solid $color-light;
         }
+        .tabbed-content {
+          // border-left: 1px solid $color-light;
+          // border-bottom: 1px solid $color-light;
+        }
+        .scrollable {
+          min-height: 80px;
+          max-height: 200px;
+          overflow: auto;
+        }
+        p {
+          // font-size: 0.85rem;
+          // font-weight: lighter;
+          //padding: 5px;
+        }
+
+      }
+
+      .inner-footer {
+        padding-left: 5px;
+        // background: $color-very-light;
+        // border-top: 1px solid $color-light;
       }
     }
   }
@@ -164,10 +200,9 @@ section {
 ul.pledges-list {
   list-style: none;
   margin: 0;
-  padding: 10px;
   font-size: 0.9em;
   border: none;
-  border-left: 1px solid $color-light;
+  // border-left: 1px solid $color-light;
 
   li {
     padding: 2px 10px;
