--- a/app/app/src/style/nav-bar.scss
+++ b/app/app/src/style/nav-bar.scss
@@ -38,12 +38,12 @@
   }
   .nav-bar {
     color: $color-quaternary;
-    border-bottom: 1px solid darken($color-secondary, 10%);
+    border-bottom: 1px solid $color-medium;
 
-    box-shadow: inset 0px 11px 15px -10px darken($color-secondary, 10%);
+    box-shadow: 0px 4px 10px -5px $color-medium;
 
-    /* border-top: 1px solid lighten($color-primary, 20%); */
-    background: $color-secondary;
+    border-top: 1px solid $color-secondary;
+    background: $color-white;
     ul {
       list-style: none;
       padding: 0;
@@ -56,11 +56,11 @@
         a {
           text-shadow: none;
           font-weight: 200;
-          color: $color-primary;
+          color: $color-secondary;
           text-decoration: none;
           &.active {
             font-weight: 600;
-            color: $color-white;
+            color: $color-primary;
           }
         }
       }
