--- a/app/app/src/style/containers.scss
+++ b/app/app/src/style/containers.scss
@@ -200,12 +200,13 @@ section {
 ul.pledges-list {
   list-style: none;
   margin: 0;
+  padding: 0;
   font-size: 0.9em;
   border: none;
   // border-left: 1px solid $color-light;
 
   li {
-    padding: 2px 10px;
+    padding: 5px 0;
     border: none;
     border-bottom: 1px solid $color-light;
     border-radius:0;
@@ -220,7 +221,7 @@ ul.pledges-list {
   margin-top: -15px;
   padding: 15px 0;
   border-bottom: 1px solid $color-light;
-  background: lighten($color-light, 7%);
+  background: $color-very-light;
   color: $color-dark;
 }
 .content-body {
