--- a/app/app/src/style/forms.scss
+++ b/app/app/src/style/forms.scss
@@ -17,6 +17,14 @@
     background: $color-primary;
     background: linear-gradient(to bottom, $color-primary 0%,darken($color-primary, 7%) 50%,darken($color-primary, 7%) 51%,$color-primary 100%);
     color: $color-white;
+    &.is-ghost {
+      color: $color-primary;
+      border: none;
+      &:hover {
+        background: $color-primary;
+        color: white;
+      }
+    }
   }
 
   &.is-secondary {
@@ -47,6 +55,10 @@
     width: 100%;
   }
 
+  &.is-ghost {
+    background: transparent;
+  }
+
   &:focus {
     outline: none;
     // todo this needs to be replaced with something that keeps
@@ -58,7 +70,39 @@
   font-size: inherit;
   display: block;
   padding: 10px;
-  border: 1px solid lighten($color-dark, 30%);
+  border: 1px solid $color-medium;
+
+  &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: $color-secondary;
+    font-style: italic;
+    opacity: 0.7;
+  }
+  &::-moz-placeholder { /* Firefox 19+ */
+    color: $color-secondary;
+    font-style: italic;
+    opacity: 0.7;
+  }
+  &:-ms-input-placeholder { /* IE 10+ */
+    color: $color-secondary;
+    font-style: italic;
+    opacity: 0.7;
+  }
+  &:-moz-placeholder { /* Firefox 18- */
+    color: $color-secondary;
+    font-style: italic;
+    opacity: 0.7;
+  }
+
+  &.is-ghost {
+    padding: 10px 0;
+    border: none;
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid $color-light;
+    &:focus {
+      outline: none;
+      border-bottom: 1px solid $color-medium;
+    }
+  }
 }
 
 .dp-form {
@@ -83,6 +127,6 @@
 }
 
 .DraftEditor-root {
-  border: 1px solid lighten($color-dark, 30%);
+  border: 1px solid $color-medium;
   padding: 10px;
 }
