--- a/app/app/src/style/branding.scss
+++ b/app/app/src/style/branding.scss
@@ -1,7 +1,8 @@
 
 body {
   .dev-color {
-    font-weight: 700;
+    font-weight: 600;
+    font-family: Impact, Charcoal, sans-serif;
     color: darken($color-secondary, 10%);
   }
 }
