--- a/app/app/src/style/variables.scss
+++ b/app/app/src/style/variables.scss
@@ -1,5 +1,5 @@
 
-$logo-white-round: '/logo100x100.png';
+$logo-white-round: '/logo500.png';
 // colors taken from Phase1UI
 $color-primary: #47cb9c;
 $color-secondary: #19647E;
